# LSGDDN-LCD

./: CMakeLists.txt  README.md  cmake.sh
config/: config.yaml
include/: DynamicNode.h  LSGD.h  tools.cpp  tools.h
src/: DynamicNode.cpp  LSGD.cpp  main.cpp
tools/: LoopResultVisualization.py  P&R_Evaluator.py
tools/loopinf/: loopinf-cc.txt  loopinf-hsl.txt  loopinf-kitti-00.txt  loopinf-kitti-02.txt  loopinf-kitti-05.txt  loopinf-kitti-06.txt  loopinf-kitti-07.txt  loopinf-kitti-09.txt  loopinf-ma.txt  loopinf-nc.txt  loopinf-yf.txt
